<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@drawable/calc_screen_no_text" xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent"
    	android:orientation="vertical" 
    	android:id="@+id/screenLayout" android:layout_height="wrap_content">
        <View android:layout_width="fill_parent" android:layout_height="60dp"/>
        
		<TableLayout
		    android:layout_width="fill_parent"
		    android:stretchColumns="1|2"
		    android:layout_height="wrap_content" android:weightSum="5">
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >
		        <TextView
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:textStyle="bold"
		            android:textSize="16sp"
		            android:gravity="right"
		            android:visibility="invisible"
		            android:textColor="@android:color/black" android:text="Distance Covered:" android:layout_width="120dp"/>
        	</TableRow>
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >
		        <TextView
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:textStyle="bold"
		            android:textSize="16sp"
		            android:gravity="right"
		            android:visibility="invisible"
		            android:textColor="@android:color/black" android:text="Distance Covered:" android:layout_width="120dp"/>
        	</TableRow>
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >

		        <TextView
		            android:layout_width="120dp"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:gravity="right"
		            android:text="@string/DISTANCE_COVERED"
		            android:textColor="@android:color/black"
		            android:textSize="16sp"
		            android:textStyle="bold" />

		        <View android:layout_height="1dp" android:layout_width="40dp"/>

		        <EditText
		            android:id="@+id/DistanceCovered"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:layout_weight="1"
		            android:background="#c5c5c5"
		            android:gravity="right|center_vertical"
		            android:hint="@string/DOTS"
		            android:imeOptions="actionNext"
		            android:inputType="text|number"
		            android:paddingRight="5dp" />

	        </TableRow>
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >

		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:gravity="right"
		            android:text="@string/LITRES_USED"
		            android:textColor="@android:color/black"
		            android:textSize="16sp"
		            android:textStyle="bold" />

		        <View android:id="@+id/view1" android:layout_width="20dp" android:layout_height="1dp"></View>

		        <EditText
		            android:id="@+id/LitresFuelUsed"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:layout_weight="1"
		            android:background="#c5c5c5"
		            android:gravity="right|center_vertical"
		            android:hint="@string/DOTS"
		            android:imeOptions="actionGo"
		            android:inputType="text|number"
		            android:paddingRight="5dp" />

		    </TableRow>
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >

		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:gravity="right"
		            android:text="@string/COST_PER_LITRE"
		            android:textColor="@android:color/black"
		            android:textSize="16sp"
		            android:textStyle="bold" />

		        <View android:layout_height="1dp" android:id="@+id/View01" android:layout_width="20dp"></View>

		        <EditText
		            android:id="@+id/CostPerLitre"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:layout_weight="1"
		            android:background="#c5c5c5"
		            android:gravity="right|center_vertical"
		            android:hint="@string/DOTS"
		            android:imeOptions="actionGo"
		            android:inputType="text|number"
		            android:paddingRight="5dp" />

		    </TableRow>


		    <TableRow
		        android:layout_height="25dp"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >

		        <Button
		            android:id="@+id/button1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
		            android:text="@string/RESET"
		            android:textSize="32dp" >
</Button>
		    </TableRow>
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >

		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:gravity="right"
		            android:text="@string/YOUR_MPG"
		            android:textColor="@android:color/black"
		            android:textSize="26sp"
		            android:textStyle="bold" />

		        <View android:layout_height="1dp" android:id="@+id/View02" android:layout_width="20dp"></View>

		        <TextView
		            android:id="@+id/MPG"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:background="@android:color/transparent"
		            android:gravity="left|center_vertical"
		            android:text="@string/DOTS"
		            android:textSize="20sp" />

		    </TableRow>
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:textStyle="bold"
		            android:textSize="16sp"
		            android:gravity="right"
		            android:textColor="@android:color/black" android:text="KM per litre:"/>
		        <View android:layout_height="1dp" android:id="@+id/View03" android:layout_width="20dp"></View>

		        <TextView
		            android:id="@+id/KMPerLitre"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:background="@android:color/transparent"
		            android:gravity="right|center_vertical"
		            android:hint="@string/DOTS"
		            android:inputType="none" />

		    </TableRow>
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:textStyle="bold"
		            android:textSize="16sp"
		            android:gravity="right"
		            android:textColor="@android:color/black" android:text="Pence per mile:"/>
		        <View android:layout_height="1dp" android:id="@+id/View04" android:layout_width="20dp"></View>

		        <TextView
		            android:id="@+id/PencePerMile"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:background="@android:color/transparent"
		            android:gravity="right|center_vertical"
		            android:hint="@string/DOTS" />

		    </TableRow>
		    <TableRow
		        android:layout_height="wrap_content"
		        android:weightSum="2"
		        android:layout_margin="5dp"
		        >
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right|center_vertical"
		            android:layout_weight="1"
		            android:textStyle="bold"
		            android:textSize="16sp"
		            android:gravity="right"
		            android:textColor="@android:color/black" android:text="US MPG:"/>
		        <View android:layout_height="1dp" android:id="@+id/View05" android:layout_width="20dp"></View>

		        <TextView
		            android:id="@+id/US_MPG"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:background="@android:color/transparent"
		            android:gravity="right|center_vertical"
		            android:hint="@string/DOTS"
		            android:inputType="none" />

		    </TableRow>
		
		</TableLayout>
    </RelativeLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/Admob" android:layout_width="fill_parent" android:weightSum="1" android:layout_alignParentBottom="true"></LinearLayout>
</RelativeLayout>
